[package]
name = "hyperdome-dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyperdome-core = { "path" = "../hyperdome-core", features = ["hot-reload"]}
hyperdome-api = { "path" = "../hyperdome-api" }
clap = { version = "4.3.*", features = ["derive"] }
log = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
pyo3-asyncio = { workspace = true }
pyo3 = { "version" = "0.19.*" }