[package]
name = "hypermangle-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { "version" = "0.19.*", features = ["auto-initialize"] }
pyo3-asyncio = { workspace = true }

fxhash = "0.2.*"

axum = { workspace = true }
tower = "0.4.*"
tower-http = { version = "0.4.*", features = ["cors", "compression-gzip", "compression-br", "trace", "auth"] }

constant_time_eq = "0.3.*"
regex = "1.9.*"
notify = { version = "6.0.*", optional = true, default-features = false, features = ["macos_kqueue"] }

parking_lot = { workspace = true }
tokio = { workspace = true }

toml = { workspace = true }
serde = { workspace = true}

hypermangle-py = { path = "../hypermangle-py" }
hypermangle-api = { path = "../hypermangle-api" }

fern = "0.6.*"
humantime = "2.1.*"
log = { workspace = true }

[features]
hot-reload = ["notify"]