[package]
name = "hypermangle-core"
version = "0.5.3"
edition = "2021"
description = "The core crate behind the hypermangle application"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { "version" = "0.19.*", features = ["auto-initialize"], optional = true }
pyo3-asyncio = { workspace = true, optional = true }

fxhash = "0.2.*"

axum = { workspace = true }
tower = "0.4.*"
tower-http = { version = "0.4.*", features = ["cors", "compression-gzip", "compression-br", "trace", "auth"] }
hyper = "0.14.*"

constant_time_eq = "0.3.*"
regex = "1.9.*"
notify = { version = "6.0.*", optional = true, default-features = false, features = ["macos_kqueue"] }

parking_lot = { workspace = true }
tokio = { workspace = true }
interprocess = { version = "1.2.1", features = ["tokio_support"] }
futures = "0.3.*"

toml = { workspace = true }
serde = { workspace = true}
bincode = "1.3.*"

hypermangle-py = "0.2"

lers = { version = "0.4.*", features = ["http-01"] }
tokio-rustls = "0.24.*"
rustls-pemfile = "1.0.*"

fern = "0.6.*"
humantime = "2.1.*"
log = { workspace = true }
clap = { workspace = true }

[features]
hot-reload = ["notify"]
python = ["pyo3", "pyo3-asyncio"]