[package]
name = "hypermangle-py"
version = "0.1.0"
edition = "2021"

[lib]
name = "hypermangle_py"
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { "version" = "0.19.*", features = ["extension-module"] }
axum = { workspace = true }
pyo3-asyncio = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }