[package]
name = "hypermangle-py"
version = "0.2.0"
edition = "2021"
description = "Python bindings for hypermangle python scripts"
license = "MIT OR Apache-2.0"

[lib]
name = "hypermangle_py"
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { "version" = "0.19.*", features = ["extension-module"] }
axum = { workspace = true }
pyo3-asyncio = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }